--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="collapse navbar-collapse" id="main-nav">
         <ul class="navbar-nav ml-auto my-lg-0">
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#event-info">課綱內容</a></li>
-            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#event-location">地點時間</a></li>
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#gift-banner">贈禮資訊</a></li>
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#event-join">我要報名</a></li>
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#questions">報名資格</a></li>
         </ul>
@@ -253,35 +253,24 @@
         </div>
       </section>
 
-     <!-- event-location -->
-     <span class="anchor" id="event-location"></span>
-     <section class="event-location wow fadeInUp">
-       <div class="container">
-         <div class="row d-flex justify-content-center">
-           <h2 class="font-weight-bold section-heading">地點時間</h2>
-         </div>
-         <div class="row d-flex justify-content-center">
-           <div class="col-lg-5">
-             <ul class="list-group">
-                <li class="list-group-item"><h4>訓練期間</h4>5/18-7/17  350 hr</li>
-                <li class="list-group-item"><h4>報名期間</h4>即日期至 5/8</li>
-                <li class="list-group-item"><h4>招生人數</h4>限30人</li>
-                <li class="list-group-item"><h4>上課地點</h4>新北市板橋區中山路一段3號10樓</li>
-              </ul>
+      <!-- Gift banner -->
+      <span class="anchor" id="gift-banner"></span>
+      <section class="gift-banner wow fadeInUp">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6 text-center align-self-center">
+              <h2 class="font-weight-bold display-4">贈送</h2>
+              <div class="gift-banner__box">
+                <h3 class="font-weight-bold">線上設計課程180堂！</h3>
+                <h4>你關心世界，我們關心你，<br>防疫不停學！免費線上學！</h4>
+              </div>
             </div>
-
-            <div class="col-lg-5">
-              <ul class="list-group list-group-flush">
-                 <li class="list-group-item"><h4>考試日期</h4>5/12 筆試+口試</li>
-                 <li class="list-group-item"><h4>入選公告</h4>5/15 下午4:00</li>
-                 <li class="list-group-item"><h4>負擔費用</h4>$ 5,699  80% 補助</li>
-                 <li class="list-group-item"><h4>上課時間</h4>週一至週五 9:00-18:00  午休1小時</li>
-               </ul>
-             </div>
-
-         </div>
-       </div>
-     </section>
+            <div class="col-lg-6 align-self-center gift-banner__badge">
+              <img class="img-fluid" src="./images/study.svg" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
 
      <!-- event-join -->
      <span class="anchor" id="event-join"></span>
@@ -339,25 +328,6 @@
 
            <!-- Join us Form -->
 
-         </div>
-       </div>
-     </section>
-
-     <!-- Gift banner -->
-     <span class="anchor" id="gift-banner"></span>
-     <section class="gift-banner text-light wow fadeInUp">
-       <div class="container">
-         <div class="row">
-           <div class="col-lg-6 text-center align-self-center">
-             <h2 class="font-weight-bold display-4">贈送</h2>
-             <div class="gift-banner__box">
-               <h3 class="font-weight-bold">線上設計課程180堂！</h3>
-               <h4>你關心世界，我們關心你，<br>防疫不停學！免費線上學！</h4>
-             </div>
-           </div>
-           <div class="col-lg-6 align-self-center">
-             <img class="img-fluid" src="./images/study.svg" alt="">
-           </div>
          </div>
        </div>
      </section>
