--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
               </div>
             </div>
             <div class="col-lg-6 align-self-center gift-banner__badge">
-              <img class="img-fluid" src="./images/study.svg" alt="">
+              <img class="mx-auto d-block img-fluid" src="./images/study.svg" alt="">
             </div>
           </div>
         </div>
