--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
               <input name="mediaSub" type="text" hidden value="668" />
               <input name="type" type="text" hidden value="Event" />
               <input name="course" type="text" hidden value="商用多媒體網頁設計班" />
-               <h2 class="text-center font-weight-bold">限30名享補助！再拿<span>萬元生活津貼</span>！</h2>
+               <h2 class="text-center font-weight-bold">限30名享補助！<br>再拿<span>萬元生活津貼</span>！</h2>
                <p class="form__text text-center mt-2">讓你培養技能實現高薪夢想，補助資格將有專人電話通知。</p>                 <div class="row mt-4">
                    <div class="col-md-6">
                      <input type="text" class="form-control" placeholder="真實姓名" name="name" />
